Change text color on click

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,25 @@
         app:layout_constraintVertical_bias="0.307" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onbuttonClick"
-        android:text="Button"
+        android:onClick="onTextButtonClick"
+        android:text="@string/text_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.3" />
+
+    <Button
+        android:id="@+id/ColorButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onColorButtonClick"
+        android:text="@string/color_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
