--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.307" />
-
     <Button
-        android:id="@+id/TextButton"
+        android:id="@+id/countWordsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onTextButtonClick"
+        android:layout_marginBottom="200dp"
+        android:onClick="onCountButtonClick"
         android:text="@string/text_button_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/countWordsInput"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#DAD7D7"
+        android:ems="10"
+        android:gravity="center_horizontal|center_vertical"
+        android:hint="@string/text_input_hint"
+        android:inputType="textMultiLine"
+        android:shadowColor="#FFFFFF"
+        android:textColorHint="#5E5E5E"
+        app:layout_constraintBottom_toTopOf="@+id/countWordsResults"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toBottomOf="@+id/countWordsType" />
+
+    <TextView
+        android:id="@+id/countWordsResults"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_result_text"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/countWordsButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countWordsInput" />
+
+    <Spinner
+        android:id="@+id/countWordsType"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
