--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,52 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/countWordsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
-        android:onClick="onCountButtonClick"
-        android:text="@string/text_button_text"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="411dp"
+        android:layout_height="653dp"
+        android:onClick="onClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/countWordsInput"
-        android:layout_width="250dp"
-        android:layout_height="150dp"
-        android:background="#FFFFFF"
-        android:backgroundTint="#DAD7D7"
-        android:ems="10"
-        android:gravity="center_horizontal|center_vertical"
-        android:hint="@string/text_input_hint"
-        android:inputType="textMultiLine"
-        android:shadowColor="#FFFFFF"
-        android:textColorHint="#5E5E5E"
-        app:layout_constraintBottom_toTopOf="@+id/countWordsResults"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countWordsType" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/obdeleven1" />
 
     <TextView
-        android:id="@+id/countWordsResults"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_result_text"
+        android:text="OBDEleven"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/countWordsButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countWordsInput" />
-
-    <Spinner
-        android:id="@+id/countWordsType"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Edvinas Kavaliauskas FTM9"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
